fixed z-index problem with modal

--- a/src/components/Modal/MenueModal.module.css
+++ b/src/components/Modal/MenueModal.module.css
@@ -7,7 +7,7 @@
   left: 0%;
   top: 0%;
   width: 50%;
-  z-index: 30;
+  z-index: 50;
   height: 100vh;
   background-color: white;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
